--- a/app/app.css
+++ b/app/app.css
@@ -30,3 +30,20 @@ body {
   box-sizing: border-box;
   font-family: "Primary Font-Medium";
 }
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
+.nav-head{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+}
+.nav-head-icons{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
