--- a/elements/popup/Popup.css
+++ b/elements/popup/Popup.css
@@ -15,18 +15,8 @@
   background: #fff;
   padding: 1.25rem;
   border-radius: 0.625rem;
-  max-width: 25rem;
+  /* max-width: 25rem; */
   width: 90%;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
   position: relative;
-}
-
-.popup-close {
-  margin-top: 0.9375rem;
-  padding: 0.375rem 0.75rem;
-  background: #fac949;
-  border: none;
-  border-radius: 0.3125rem;
-  cursor: pointer;
-  font-size: 1rem;
 }
