--- a/elements/popup/Popup.css
+++ b/elements/popup/Popup.css
@@ -15,8 +15,8 @@
   background: #fff;
   padding: 1.25rem;
   border-radius: 0.625rem;
-  /* max-width: 25rem; */
-  width: 90%;
+  width: fit-content;
+  min-width: 25rem;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
   position: relative;
 }
